[project]
name = "llm-steganography"
version = "0.1.0"
description = "Steganography with the help of LLMs."
authors = [
    {name = "HighDoping",email = "highdoping@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "cryptography (>=44.0.0,<45.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
notebook = "^7.3.2"

