[project]
name = "llm-steganography"
version = "0.1.0"
description = "Steganography with the help of LLMs."
authors = [
    {name = "HighDoping",email = "highdoping@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10,<3.13"
dependencies = [
    "cryptography (>=44.0.0,<45.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "reedsolo (>=1.7.0,<2.0.0)",
    "transformers (>=4.48.1,<5.0.0)",
    "torch (>=2.5.1,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
notebook = "^7.3.2"
pytest = "^8.3.4"

[project.optional-dependencies]
cuda = [
    "torch",
]

[tool.poetry.dependencies]
torch = [
    { version = ">=2.5.1+cu124",platform="linux",markers = "extra =='cuda'", source = "pytorch-cuda"},
    { version = ">=2.5.1+cu124",platform="win32",markers = "extra =='cuda'", source = "pytorch-cuda"},
    { version = ">=2.5.1+cpu", platform="linux",markers = "extra != 'cuda'", source = "pytorch-cpu"},
    { version = ">=2.5.1+cpu", platform="win32",markers = "extra != 'cuda'", source = "pytorch-cpu"},
    { version = ">=2.5.1", platform = 'darwin', source = "pypi"},
]

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"